Updated host name for Nexus server.

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 		<java.version>1.8</java.version>
 		<cucumber.version>1.2.5</cucumber.version>
 		<docker.image.prefix>home</docker.image.prefix>
-		<nexus.host>bricktop:8081</nexus.host>
+		<nexus.host>nexus:8081</nexus.host>
 	</properties>
 
 	<dependencies>
